js262/test/language/module-code/parse-err-decl-pos-export-labeled.js


/*---
description: Statement cannot contain an `export` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

test262: export default null;
